--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "groq-sdk": "^0.37.0",
     "lucide-react": "^0.562.0",
     "next": "^15.1.5",
+    "next-themes": "^0.4.6",
     "openai": "^6.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
