--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,16 @@ OPENAI_API_KEY=your-openai-key
 # GOOGLE_AI_API_KEY=your-google-ai-key
 
 # App Configuration
+# For local development use http://localhost:3000
+# For production use your Vercel URL: https://social-media-scheduler-auto-repurpo.vercel.app
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 NODE_ENV=development
+
+# Shopify Configuration
+SHOPIFY_API_KEY=your-shopify-api-key
+SHOPIFY_API_SECRET=your-shopify-api-secret
+SHOPIFY_SCOPES=read_products
+
+# Pinterest Configuration
+PINTEREST_APP_ID=your-pinterest-app-id
+PINTEREST_APP_SECRET=your-pinterest-app-secret
